@@ -67,16 +67,6 @@ let test_compare () =
   assert (Uchar.(compare max min) = 1);
   ()
 
-let test_dump () =
-  let str u = Format.asprintf "%a" Uchar.dump u in
-  assert (str Uchar.min = "U+0000");
-  assert (str Uchar.(succ min) = "U+0001");
-  assert (str Uchar.(of_int 0xFFFF) = "U+FFFF");
-  assert (str Uchar.(succ (of_int 0xFFFF)) = "U+10000");
-  assert (str Uchar.(pred max) = "U+10FFFE");
-  assert (str Uchar.max = "U+10FFFF");
-  ()
-
 let tests () =
   test_constants ();
   test_succ ();
@@ -87,7 +77,6 @@ let tests () =
   test_to_char ();
   test_equal ();
   test_compare ();
-  test_dump ();
   ()
 
 let () =
